# v-common-ft-xapian

./: Cargo.toml  Cargo.toml.local  README.md
src/: index_schema.rs  key2slot.rs  xapian_reader.rs  xapian_vql.rs
