[package]
name = "v_ft_xapian"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
scan_fmt = "0.1.3"
crc32fast = "1.2.0"
maplit = "1.0.2"
chrono = "0.4"
xapian-rusty = "0.0.42"
#xapian-rusty = { path = "../xapian-rusty" }
regex = "1.3.9"
stopwatch = "0.0.7"

v_authorization = "0.1.0"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git", version = "0.1.1" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_az_lmdb = { git = "https://github.com/semantic-machines/v-common-az-lmdb.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
