[package]
name = "v-common-ft-xapian"
version = "0.1.38"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"
description = "common part of the veda platform"
license     = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
scan_fmt = "0.1.3"
crc32fast = "1.2.0"
maplit = "1.0.2"
chrono = "0.4"
xapian-rusty = "0.0.46"
regex = "1.3.9"
stopwatch = "0.0.7"

v_authorization = "=0.1.1"

v_az_lmdb = { package = "v-common-az-lmdb", version = "=0.1.2" }
v_module = { package = "v-common-module", version = "=0.1.38" }
